; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-trees.c_intree_free.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-trees.c_intree_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intree_node = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @intree_free(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.intree_node*, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  store i32 0, i32* %5, align 4
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %31

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %5, align 4
  %12 = load i64, i64* %4, align 8
  %13 = call %struct.intree_node* @TS_NODE(i64 %12)
  store %struct.intree_node* %13, %struct.intree_node** %6, align 8
  %14 = load i32, i32* %3, align 4
  %15 = load %struct.intree_node*, %struct.intree_node** %6, align 8
  %16 = getelementptr inbounds %struct.intree_node, %struct.intree_node* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = call i32 @intree_free(i32 %14, i64 %17)
  %19 = load i32, i32* %5, align 4
  %20 = add nsw i32 %19, %18
  store i32 %20, i32* %5, align 4
  %21 = load i32, i32* %3, align 4
  %22 = load %struct.intree_node*, %struct.intree_node** %6, align 8
  %23 = getelementptr inbounds %struct.intree_node, %struct.intree_node* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @intree_free(i32 %21, i64 %24)
  %26 = load i32, i32* %5, align 4
  %27 = add nsw i32 %26, %25
  store i32 %27, i32* %5, align 4
  %28 = load i32, i32* %3, align 4
  %29 = load i64, i64* %4, align 8
  %30 = call i32 @free_intree_node(i32 %28, i64 %29)
  br label %31

31:                                               ; preds = %9, %2
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local %struct.intree_node* @TS_NODE(i64) #1

declare dso_local i32 @free_intree_node(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
